codegen/ui_tests/export_fn_path_attr.stderr
error: expecting attribute name
  --> ui_tests/export_fn_path_attr.rs:10:13
   |
10 | #[export_fn(rhai::name = "thing")]
   |             ^^^^
